(Labo1Spinners) ready to implement glide library

--- a/Labo1Spinners/app/src/main/res/values/strings.xml
+++ b/Labo1Spinners/app/src/main/res/values/strings.xml
@@ -1,31 +1,13 @@
 <resources>
     <string name="app_name">Labo1Spinners</string>
 
-    <string-array name="provinces_array">
+    <string name="spinner1_prompt">Choissisez une province</string>
+    <string name="spinner2_prompt">Choissisez une ville</string>
+
+    <string-array name="table_provinces">
         <item>Québec</item>
         <item>Ontario</item>
         <item>Colombie-Britannique</item>
-    </string-array>
-
-    <string-array name="quebec_array">
-        <item>Montréal</item>
-        <item>Québec</item>
-        <item>Laval</item>
-        <item>Longueuil</item>
-    </string-array>
-
-    <string-array name="ontario_array">
-        <item>Toronto</item>
-        <item>Ottawa</item>
-        <item>Mississauga</item>
-        <item>Brampton</item>
-    </string-array>
-
-    <string-array name="cb_array">
-        <item>Vancouver</item>
-        <item>Surrey</item>
-        <item>Burnaby</item>
-        <item>Richmond</item>
     </string-array>
 
 </resources>
