--- a/ProjetExercices/app/src/main/res/values/strings.xml
+++ b/ProjetExercices/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">ProjetExercices</string>
     <string name="navigation_drawer_open">Open</string>
     <string name="navigation_drawer_close">Close</string>
+    <string-array name="array_categs">
+        <item>Abdominaux</item>
+        <item>Avant-Bras</item>
+        <item>Biceps</item>
+        <item>Cuisses</item>
+        <item>Dos</item>
+        <item>Épaules</item>
+        <item>Mollets</item>
+        <item>Pectoraux</item>
+        <item>Triceps</item>
+    </string-array>
 </resources>
